<resources>

    <!-- Common -->
    <string name="app_name">DayIt</string>
    <string name="title_activity_settings">Settings Activity</string>

    <!-- Alarm activity -->
    <string name="wakeUp">Wake up !!!</string>
    <string name="set_date">Date</string>
    <string name="set_time">Time</string>
    <string name="bt_notif">Show Notification</string>
    <string name="title_activity_alarm">Alarm</string>
    <string name="alarm_title_hint">Plan title</string>
    <string name="alarm_details_hint">Details</string>
    <string name="aa_save_alarm">Save alarm</string>
    <string name="ok">Ok</string>
    <string name="days_of_week_choose">Choose days of week</string>
    <string name="cancel">Cancel</string>
    <string name="alarmTitle_hint">Alarm title</string>

    <!--Local activity-->
    <string name="local_plan_title">Local plan</string>
    <string name="alarm_sound_duration">Sound duration</string>

    <!--Remote activity-->
    <string name="remote_plan_title">Remote plan</string>
    <string name="contact_info_hint">Contact info</string>
    <string name="get_contact">Get contact</string>
    <string name="contact_list">Contact list</string>

    <!-- Net activity -->
    <string name="login">User login</string>
    <string name="password">Password</string>
    <string name="log_in">Log in</string>
    <string name="Sign_up">Sign up</string>
    <string name="go_to_sph">Go to Splash</string>
    <!-- Regex patterns -->
    <string name="login_pttrn">^[a-zA-Z][a-zA-Z0-9]{3,14}$</string>
    <string name="pass_pttrn">[a-zA-Z0-9]{6,15}</string>
    <string name="title_pttrn">^\\s*$</string>
    <string name="phone_pttrn">^((\+[\d.]{10,12})?)?$</string>

    <string name="back">Back</string>
    <string name="sa_vibration">Vibration</string>
    <string name="sa_notification_enable">Notification enable</string>
    <string name="sa_notification_volume">Notification volume</string>
    <string name="sa_set_user_sound">Set user sound</string>

    <!-- Planner activity -->
    <string name="pa_start_sync">Start synchronization</string>
    //<string name="pa_add_new_reminder">Add reminder</string>
    <string name="pa_settings">Settings</string>
    <string name="pa_log_out">Log out</string>
    <string name="pa_context_edit">Edit</string>
    <string name="pa_context_delete">Delete</string>
    <string name="pa_user_activity">Edit profile</string>
    <string name="pa_authorization">Authorization</string>
    <string name="pa_delete_plan">Delete plan</string>
    <string name="pa_delete_all_plans">Delete all plans</string>
    <string name="enter_your_pass">Password</string>
    <string name="pa_contacts">Contacts</string>

    <!-- View plan activity -->
    <string name="title_activity_view_plan">Plan view</string>
    <string name="accept_s">Accept</string>
    <string name="dismiss_s">Dismiss</string>

    <!-- Names of buttons from main menu -->
    <string name="s_planner_act">Open Planner</string>
    <string name="s_alarm_act">Alarm</string>
    <string name="s_settings_act">Settings Activity</string>

    <!-- Audio -->
    <string name="stop_playing">Stop</string>
    <string name="start_playing">Play</string>
    <string name="choose_audio">Choose audio</string>
    <string name="set_audio">Set audio</string>
    <string name="save_alarm">Save alarm</string>
    <string name="temp_date">2015.06.12</string>
    <string name="set_sound">Set sound</string>

    <!-- TaskTypeDialog -->
    <string name="plan_type_title">Choose plan type</string>

    <!-- DeleteDialog -->
    <string name="delete_dialog_title">Are you sure ?</string>
    <string name="delete_dialog_ok">Ok</string>

    <!-- SettingActivity -->
    <string name="delete_all_plans">Delete all plans</string>

    <!-- EditUserActivity -->
    <string name="ua_save">Save changes</string>
    <string name="ua_password_hint">Password</string>
    <string name="ua_login_hint">Login</string>
    <string name="ua_phone_hint">Phone number</string>

</resources>
