<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="chisw.com.plans.ui.activities.PlannerActivity">

    <item
        android:id="@+id/pa_menu_add_reminder"
        android:title="@string/pa_add_new_reminder"
        android:icon="@drawable/ic_add_circle_white_24dp"
        app:showAsAction="always">
    </item>

    <item
        android:id="@+id/pa_menu_settings"
        app:showAsAction="never"
        android:icon="@drawable/ic_settings_white_24dp"
        android:title="@string/pa_settings">
    </item>

    <item
        android:id="@+id/pa_menu_log_off"
        app:showAsAction="never"
        android:icon="@drawable/ic_settings_white_24dp"
        android:title="@string/pa_log_out">
    </item>
</menu>
