<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1">

    <include layout="@layout/toolbar" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvDate"
                android:textColor="#00796B"
                android:gravity="center"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:text="@string/title_activity_alarm"
                android:textSize="22sp">

            </TextView>

            <TextView
                android:id="@+id/tvTime"
                android:textColor="#00796B"
                android:gravity="center"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:text="@string/title_activity_alarm"
                android:textSize="22sp">

            </TextView>

            <EditText
                android:id="@+id/setTitle_textview"
                style="@style/style_aa_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/alarmTitle_hint" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/setDetails_textview"
                style="@style/style_aa_et"
                android:layout_gravity="center_horizontal"
                android:hint="Details"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_duration_sound"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Sound duration"
                    android:layout_margin="@dimen/margin"
                    android:textSize="16sp"/>

                <TextView
                    android:id="@+id/tv_show_duration_sound"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"

                    android:text="--"
                    android:layout_margin="@dimen/margin"/>

                <SeekBar
                    android:id="@+id/sb_duration_sound"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="100"
                    android:max="100"
                    />
            </LinearLayout>


            <Button
                android:id="@+id/aa_setAudio_btn"
                style="@style/style_aa_btns"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/set_audio" />

            <Button
                android:id="@+id/bt_save_alarm_date"
                style="@style/style_aa_btns"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/set_date" />
            <Button
                android:id="@+id/bt_save_alarm_time"
                style="@style/style_aa_btns"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/set_time" />

            <Button
                    android:id="@+id/bt_save_alarm"
                    style="@style/style_aa_btns"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/save_alarm" />

        </LinearLayout>
</LinearLayout>