<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">


    <RelativeLayout
        android:id="@+id/ta_main_relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/ta_top_relativeLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/ta_planImage_imageView"
                android:layout_width="110dp"
                android:layout_height="110dp"
                android:layout_margin="10dp"
                android:scaleType="centerCrop"
                android:src="@drawable/aa_icon"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@id/ta_planImage_imageView"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/ta_setDate_textView"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin8"
                    android:clickable="true"
                    android:gravity="center"
                    android:paddingLeft="24dp"
                    android:text="@string/set_date"
                    android:textColor="@color/color_aa_edit_text"
                    android:textSize="20sp"/>

                <TextView
                    android:id="@+id/ta_setTime_textView"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin8"
                    android:clickable="true"
                    android:gravity="center"
                    android:paddingLeft="24dp"
                    android:text="@string/set_time"
                    android:textColor="@color/color_aa_edit_text"
                    android:textSize="20sp"/>

            </LinearLayout>

        </RelativeLayout>

        <EditText
            android:id="@+id/ta_title_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/ta_top_relativeLayout"
            android:hint="@string/alarm_title_hint"
            android:maxLength="21"
            android:maxLines="1"/>


        <EditText
            android:id="@+id/ta_details_textView"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/ta_title_textView"
            android:hint="@string/alarm_details_hint"
            android:maxLines="5"/>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ta_details_textView"
            android:orientation="vertical">

            <Switch
                android:id="@+id/ta_repeatingTrig_switch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin16"
                android:text="Repeating"
                android:textColor="@color/toolbar_background_color"
                android:textOff="OFF"
                android:textOn="ON"
                android:textSize="20sp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <CheckBox
                        android:id="@+id/sunday"
                        android:gravity="center_horizontal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Sun"
                        />

                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:gravity="center"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <CheckBox
                        android:id="@+id/monday"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="Mon"/>
                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:gravity="center"
                    android:layout_width="fill_parent"
                    android:layout_weight="1"
                    android:layout_height="wrap_content">

                    <CheckBox
                        android:id="@+id/tuesday"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="Tue"/>
                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content">

                    <CheckBox
                        android:id="@+id/wednesday"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="Wed"/>
                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content">

                    <CheckBox
                        android:id="@+id/thursday"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="Thurs"/>
                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content">

                    <CheckBox
                        android:id="@+id/friday"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="Fri"/>
                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content">

                    <CheckBox
                        android:id="@+id/saturday"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="Sat"/>
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>